--- a/assets/sass/misc/_button.sass
+++ b/assets/sass/misc/_button.sass
@@ -1,1 +1,7 @@
-
+@use '../misc/vars' as *
+.template_btn
+    background-color: $primary
+    cursor: pointer
+    border-radius: 5px
+    padding: 0.75rem
+    transition: 250ms
