--- a/assets/sass/mixins/_flex.sass
+++ b/assets/sass/mixins/_flex.sass
@@ -1,4 +1,4 @@
-@mixin flex($direction: row, $justify: center, $align: center)
+@mixin flex($justify: center, $align: center, $direction: row,)
     display: flex
     flex-direction: $direction
     justify-content: $justify
