Updated some things

--- a/assets/sass/editor/_editor.sass
+++ b/assets/sass/editor/_editor.sass
@@ -3,7 +3,7 @@
 @use '../misc/button' as *
 
 .logged_in
-    display: none
+    // display: none
 
 .post_form_wrapper
     @include flex($direction: column)
