--- a/assets/sass/editor/_editor.sass
+++ b/assets/sass/editor/_editor.sass
@@ -42,3 +42,6 @@
     .add_blog_btn
         @extend .template_btn
         margin-top: 1rem
+
+        &:active
+            transform: scale(1.2) !important
