--- a/assets/sass/login/_notLoggedIn.sass
+++ b/assets/sass/login/_notLoggedIn.sass
@@ -18,5 +18,5 @@
 
     input
         background-color: $bg-shade
-        padding: 0.25rem 0.5rem
+        padding: 0.5rem
         border-radius: 5px
