--- a/assets/sass/editor/_editor.sass
+++ b/assets/sass/editor/_editor.sass
@@ -6,16 +6,17 @@
     display: none
 
 .post_form_wrapper
-    @include flex($direction: column)
-    min-height: calc(100vh - 5rem)
+    @include flex(flex-start, center, column)
+    min-height: 100vh
     background-color: $bg
 
     form
         width: 80vw
+        height: 100%
         max-width: $large
 
     .input_wrapper
-        margin-bottom: 2rem
+        margin: 1.25rem 0
         border-radius: 0.25rem
         background-color: $bg-tint
 
