added border-radius to title_input

--- a/assets/sass/editor/_editor.sass
+++ b/assets/sass/editor/_editor.sass
@@ -24,6 +24,7 @@
             padding: 1rem
             width: 100%
             background-color: $bg-tint
+            border-radius: 0.25rem
             color: $text-tint
 
             &::placeholder
