--- a/assets/sass/editor/_editor.sass
+++ b/assets/sass/editor/_editor.sass
@@ -32,8 +32,8 @@
 
     .blog_content
         flex: 1
-        padding: 1rem
         width: 100%
+        padding: 1rem 0 0 0.5rem
         height: 100%
         border-radius: 0.25rem
         background-color: $bg-tint
