Updated min-height on post_form_wrapper

--- a/assets/sass/editor/_editor.sass
+++ b/assets/sass/editor/_editor.sass
@@ -7,7 +7,7 @@
 
 .post_form_wrapper
     @include flex(flex-start, center, column)
-    min-height: 100vh
+    min-height: calc(100vh - 5rem)
     background-color: $bg
 
     form
