--- a/assets/sass/editor/_editor.sass
+++ b/assets/sass/editor/_editor.sass
@@ -36,6 +36,7 @@
         padding: 1rem 0 0 0.5rem
         height: 100%
         border-radius: 0.25rem
+        word-wrap: break-word
         background-color: $bg-tint
         color: $text-tint
 
