--- a/assets/sass/editor/_editor.sass
+++ b/assets/sass/editor/_editor.sass
@@ -2,8 +2,22 @@
 @use '../mixins/flex' as *
 @use '../misc/button' as *
 
+*
+    &::-webkit-scrollbar
+        width: 10px
+        height: 10px
+        background-color: $bg
+    &::-webkit-scrollbar-thumb
+        background-color: $primary
+        border-radius: 3px
+    &::-webkit-scrollbar-thumb:hover
+        background-color: $primary-shade
+    &::-webkit-scrollbar-track
+        background-color: $bg
+        border-radius: 10px
+
 .logged_in
-    display: none
+    display: non
 
 .post_form_wrapper
     @include flex(flex-start, center, column)
