Updated viewing for images

--- a/assets/sass/editor/_editor.sass
+++ b/assets/sass/editor/_editor.sass
@@ -80,6 +80,11 @@
     overflow: auto
     @include flex(space-evenly, center, column)
 
+    img
+        max-width: min(30rem, 100%)
+        height: auto
+        max-height: 100%
+
     strong
         font-weight: 600
 
